# oh-my-copilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  README.md  RELEASE_BODY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dev-merge-issue-close.yml  pr-check.yml  release.yml
crates/omcp-explore/: Cargo.toml
crates/omcp-mux/: Cargo.toml
crates/omcp-runtime/: Cargo.toml
crates/omcp-runtime-core/: Cargo.toml
crates/omcp-sparkshell/: Cargo.toml
docs/: STATE_MODEL.md  _config.yml  adapt.md  agents.html  clawhip-event-contract.md  codex-native-hooks.md  getting-started.html  guidance-schema.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  openclaw-integration.md  prompt-guidance-contract.md  runtime-model-metadata-cleanup.md  skills.html  troubleshooting.md  wiki-feature.md
docs/contracts/: autoresearch-command-contract.md  autoresearch-command-review.md  autoresearch-ux-deep-interview-review.md  multi-state-transition-contract.md  multi-state-transition-review.md  mux-operation-space.md  ralph-state-contract.md  runtime-authority-backlog-replay-readiness.md  (+3 more)
missions/: README.md
playground/: README.md
prompts/: analyst.md  build-fixer.md  executor.md  explore-harness.md  explore.md  git-master.md  planner.md  qa-tester.md  sisyphus-lite.md  team-executor.md  test-engineer.md  verifier.md
src/: index.ts
templates/: AGENTS.md  catalog-manifest.json
(+492 files in other folders)
